{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 7,
  "lineage": "51921191-5a5f-0cf7-ba6e-70a6145372e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pl-249620-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:route-table/rtb-09de6a2ec573e29fd",
            "default_route_table_id": "rtb-09de6a2ec573e29fd",
            "id": "rtb-09de6a2ec573e29fd",
            "owner_id": "254753841475",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a55a49ae8ddd3a5d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pl-249620-rt"
            },
            "tags_all": {
              "Name": "pl-249620-rt"
            },
            "vpc_id": "vpc-01177e58a80bf3e25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pl-249620-ig",
            "aws_vpc.pl-249620-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pl-249620-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:254753841475:instance/i-0684a8ca29054c7b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0684a8ca29054c7b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0952ca2c74b58a081",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_ip": "10.0.1.200",
            "public_ip": "18.212.198.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0177b3b48978d5747",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e7e324f30e00279",
            "tags": {
              "Name": "pl-249620-ec2",
              "terraform": "True"
            },
            "tags_all": {
              "Name": "pl-249620-ec2",
              "terraform": "True"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08dd13a10b9abd172"
            ]
          },
          "dependencies": [
            "aws_security_group.pl-249620-ssh-sg",
            "aws_subnet.pl-249620-sn",
            "aws_vpc.pl-249620-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pl-249620-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:internet-gateway/igw-0a55a49ae8ddd3a5d",
            "id": "igw-0a55a49ae8ddd3a5d",
            "owner_id": "254753841475",
            "tags": {
              "Name": "pl-249620-ig"
            },
            "tags_all": {
              "Name": "pl-249620-ig"
            },
            "vpc_id": "vpc-01177e58a80bf3e25"
          },
          "dependencies": [
            "aws_vpc.pl-249620-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pl-249620-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:security-group/sg-08dd13a10b9abd172",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dd13a10b9abd172",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pl-249620-ssh-sg",
            "name_prefix": "",
            "owner_id": "254753841475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pl-249620-ssh-sg"
            },
            "tags_all": {
              "Name": "pl-249620-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01177e58a80bf3e25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pl-249620-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pl-249620-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:subnet/subnet-08e7e324f30e00279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08e7e324f30e00279",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254753841475",
            "tags": {
              "Name": "pl-249620-sn"
            },
            "tags_all": {
              "Name": "pl-249620-sn"
            },
            "vpc_id": "vpc-01177e58a80bf3e25"
          },
          "dependencies": [
            "aws_vpc.pl-249620-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pl-249620-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:vpc/vpc-01177e58a80bf3e25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096815e5a10a83438",
            "default_route_table_id": "rtb-09de6a2ec573e29fd",
            "default_security_group_id": "sg-0ab1d7508285d2660",
            "dhcp_options_id": "dopt-acd586d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01177e58a80bf3e25",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09de6a2ec573e29fd",
            "owner_id": "254753841475",
            "tags": {
              "Name": "pl-249620"
            },
            "tags_all": {
              "Name": "pl-249620"
            }
          }
        }
      ]
    }
  ]
}